--- a/Cuda 10.1
+++ b/Cuda 10.1
@@ -1,21 +1,27 @@
-##### CUDA REPOSITORY SETUP
+# To start fresh, clean up all the nivida-related packages. Be careful when using the same system as a desktop!
+sudo apt-get --purge remove 'cuda*'
+sudo apt-get --purge remove 'nvidia*'
+sudo apt-get --purge remove 'libnvidia*'
 
-# Add NVIDIA package repositories
+# Check if all clean
+sudo find /usr/local/cuda/ -name '*blas*'
+sudo find /usr/lib/ -name '*blas*'
+
+# CUDA 10.1 instructions for creating a locally available repo and installing from it
 wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/cuda-ubuntu1804.pin
 sudo mv cuda-ubuntu1804.pin /etc/apt/preferences.d/cuda-repository-pin-600
-sudo apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/7fa2af80.pub
-sudo add-apt-repository "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/ /"
+wget http://developer.download.nvidia.com/compute/cuda/10.1/Prod/local_installers/cuda-repo-ubuntu1804-10-1-local-10.1.243-418.87.00_1.0-1_amd64.deb
+sudo dpkg -i cuda-repo-ubuntu1804-10-1-local-10.1.243-418.87.00_1.0-1_amd64.deb
+sudo apt-key add /var/cuda-repo-10-1-local-10.1.243-418.87.00/7fa2af80.pub
 sudo apt-get update
 
-wget http://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/nvidia-machine-learning-repo-ubuntu1804_1.0.0-1_amd64.deb
+# Make sure the driver number matches the GPU. Also -440 would most likely work.
+sudo apt install nvidia-driver-418
+sudo apt install cuda-10.1
 
-sudo apt install ./nvidia-machine-learning-repo-ubuntu1804_1.0.0-1_amd64.deb
-sudo apt-get update
+# Make sure the libs are now in place
+sudo find /usr/local/cuda/ -name '*blas*'
+sudo find /usr/lib/ -name '*blas*'
 
-
-#### CUDA 10
-
-sudo apt-get install -y --allow-downgrades --no-install-recommends \
-    cuda-10-0 \
-    libcudnn7=7.6.4.38-1+cuda10.0 \
-    libcudnn7-dev=7.6.4.38-1+cuda10.0
+# Run nvidia-smi for sanity check
+nvidia-smi
